--- a/src/components/careers/styles.module.css
+++ b/src/components/careers/styles.module.css
@@ -35,7 +35,7 @@
 
 .interview_card {
   width: 280px;
-  height: 300px;
+  min-height: 300px;
   background-color: var(--ifm-background-color);
   border-radius: 10px;
   box-shadow: var(--ifm-shadow-card);
